[project]
name = "tanalysis"
version = "0.1.0"
description = ""
authors = [
    {name = "pcanaleta",email = "pcanaleta@ibecbarcelona.eu"}
]
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.14.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "pandas (>=2.3.1,<4.0.0)",
    "cellpose[all] (>=4.0.8,<5.0.0)",
    "liffile (>=2026.1.22,<2027.0.0)",
    "readlif (>=0.6.6,<0.7.0)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
